# diff2rss

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
src/: feed_generator.py  git_commits.py  utils.py
src/utils/: feed.py  github.py  parsing.py  time.py
