[tool.poetry]
name = "diff2rss"
version = "0.1.0"
description = "Convert commit history to RSS feeds"
authors = ["Bryan Jones <unix.chkpwd@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygithub = "^2.5.0"
rfeed = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
