[tool.poetry]
name = "diff2rss"
version = "0.1.0"
description = "Convert commit history to RSS feeds"
authors = ["Bryan Jones <unix.chkpwd@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rfeed = "^1.1.1"
flask = "^3.1.0"
fastfeedparser = "^0.2.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
