[tool.poetry]
name = "diff2rss"
version = "1.2.1"
description = "Convert commit history to RSS feeds"
authors = ["Bryan Jones <unix.chkpwd@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastfeedparser = "^0.3.0"
fastapi = {extras = ["standard"], version = "^0.128.0"}
requests = "^2.32.3"
feedgen = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]
